😈 Settle the status old bad code
This commit (finally) updates the bad code. This will be followed by a deep rewriting of the code, with large deletions for example.
This commit ensures that all this code is gitted before heavily editing it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,55 @@ include_directories(include/)
 
 enable_testing()
 
+set(src_files src/amplitude.cpp src/qdd.cpp src/absi.cpp)
+set(header_files include/amplitude.h include/qdd.h include/absi.h)
+set(test_files test/amplitude_test.cpp test/qdd_test.cpp test/absi_test.cpp)
+
+set(sources
+    ${src_files}
+    ${header_files}
+    ${test_files}
+    )
+
+add_link_options(-lgcov --coverage)
+add_definitions(-fprofile-arcs -ftest-coverage)
+
+add_custom_target(init
+    COMMAND ${CMAKE_MAKE_PROGRAM} clean
+    COMMAND rm -f ${OBJECT_DIR}/*.gcno
+    COMMAND rm -f ${OBJECT_DIR}/*.gcda
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+)
+
+add_custom_target(gcov
+    COMMAND mkdir -p gcoverage
+    COMMAND ${CMAKE_MAKE_PROGRAM} test
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+)
+
+add_dependencies(gcov amplitude qdd)
+
+
+add_custom_command(TARGET gcov
+    COMMAND echo "=================== GCOV ===================="
+    COMMAND gcov -b ${CMAKE_SOURCE_DIR}/src/*.cpp -o ${OBJECT_DIR} -a
+    COMMAND echo "-- Source directory: ${CMAKE_SOURCE_DIR}/src/"
+    COMMAND echo "-- Coverage files have been output to ${CMAKE_BINARY_DIR}/gcoverage"
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/gcoverage
+)
+
+add_custom_target(lcov
+    COMMAND mkdir -p lcoverage
+)
+
+add_custom_command(TARGET lcov
+    COMMAND echo "=================== LCOV ===================="
+    COMMAND echo "-- Passing lcov tool under code coverage"
+    COMMAND lcov --capture --directory ../ --output-file lcoverage/main_coverage.info
+    COMMAND echo "-- Generating HTML output files"
+    COMMAND genhtml lcoverage/main_coverage.info --output-directory lcoverage
+)
+
 # Amplitude test
 add_library(amplitude STATIC src/amplitude.cpp)
 add_executable(amplitude_test test/amplitude_test.cpp)
@@ -30,4 +79,4 @@ target_link_libraries(qdd_test qdd amplitude GTest::gtest_main)
 
 include(GoogleTest)
 gtest_discover_tests(amplitude_test)
-gtest_discover_tests(qdd_test)
+# gtest_discover_tests(qdd_test)
