🧪 Add unexecuted selection test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 project(coto)
 
 # GoogleTest requires at least C++20
+set(CMAKE_CPP_COMPILER gcc)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -20,9 +21,9 @@ enable_testing()
 
 set(absi_files src/absi/polar.cpp src/absi/cartesian.cpp)
 set(absi_libs cartesian polar amplitude)
-set(src_files src/amplitude.cpp ${absi_files})
+set(src_files src/amplitude.cpp ${absi_files} src/selection.cpp src/reduction.cpp)
 set(header_files include/amplitude.h include/qdd.h include/absi.h)
-set(test_files test/amplitude_test.cpp test/qdd_test.cpp test/absi_test.cpp)
+set(test_files test/amplitude_test.cpp test/qdd_test.cpp test/absi_test.cpp test/selection_test.cpp test/reduction_test.cpp test/diagram_test.cpp)
 
 set(sources
     ${src_files}
@@ -90,10 +91,12 @@ target_link_libraries(absi_test ${absi_libs} GTest::gtest_main)
 # Diagram test
 # add_library(diagram_t STATIC )
 add_executable(diagram_test ${absi_files} test/diagram_test.cpp include/diagram.h)
-target_link_libraries(diagram_test  ${absi_libs} GTest::gtest_main)
+target_link_libraries(diagram_test ${absi_libs} GTest::gtest_main)
 
 # Selection test
-add_library(selection STATIC src/selection.cpp include/diagram.h ${absi_files} src/amplitude.cpp)
+add_library(selection STATIC include/selection.h ${absi_files} src/amplitude.cpp include/diagram.h)
+add_executable(selection_test test/selection_test.cpp)
+target_link_libraries(selection_test ${absi_libs} selection GTest::gtest_main)
 
 # Reduction test
 add_library(reduction STATIC src/reduction.cpp include/diagram.h ${absi_files} src/amplitude.cpp)
@@ -102,4 +105,4 @@ include(GoogleTest)
 gtest_discover_tests(amplitude_test)
 gtest_discover_tests(absi_test)
 gtest_discover_tests(diagram_test)
-# gtest_discover_tests(qdd_test)
+# gtest_discover_tests(selection_test)
