🔧 Update CMakeLists.txt
- Use Ninja instead of Unix Makefile
- Use C++23
- Add QASM tests
- Remove unused CodeDov commented code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.14)
 project(coto)
 
 # GoogleTest requires at least C++20
-set(CMAKE_CPP_COMPILER gcc)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_GENERATOR Ninja)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include(FetchContent)
@@ -31,45 +31,6 @@ set(sources
     ${test_files}
     )
 
-# add_link_options(-lgcov --coverage)
-# add_definitions(-fprofile-arcs -ftest-coverage)
-
-# add_custom_target(init
-#     COMMAND ${CMAKE_MAKE_PROGRAM} clean
-#     COMMAND rm -f ${OBJECT_DIR}/*.gcno
-#     COMMAND rm -f ${OBJECT_DIR}/*.gcda
-#     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-# )
-
-# add_custom_target(gcov
-#     COMMAND mkdir -p gcoverage
-#     COMMAND ${CMAKE_MAKE_PROGRAM} test
-#     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-# )
-
-# add_dependencies(gcov amplitude qdd)
-
-
-# add_custom_command(TARGET gcov
-#     COMMAND echo "=================== GCOV ===================="
-#     COMMAND gcov -b ${CMAKE_SOURCE_DIR}/src/*.cpp -o ${OBJECT_DIR} -a
-#     COMMAND echo "-- Source directory: ${CMAKE_SOURCE_DIR}/src/"
-#     COMMAND echo "-- Coverage files have been output to ${CMAKE_BINARY_DIR}/gcoverage"
-#     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/gcoverage
-# )
-
-# add_custom_target(lcov
-#     COMMAND mkdir -p lcoverage
-# )
-
-# add_custom_command(TARGET lcov
-#     COMMAND echo "=================== LCOV ===================="
-#     COMMAND echo "-- Passing lcov tool under code coverage"
-#     COMMAND lcov --capture --directory ../ --output-file lcoverage/main_coverage.info
-#     COMMAND echo "-- Generating HTML output files"
-#     COMMAND genhtml lcoverage/main_coverage.info --output-directory lcoverage
-# )
-
 
 # Amplitude test
 add_library(amplitude STATIC src/amplitude.cpp)
@@ -83,13 +44,7 @@ add_library(polar STATIC src/absi/polar.cpp)
 add_executable(absi_test test/absi_test.cpp)
 target_link_libraries(absi_test ${absi_libs} GTest::gtest_main)
 
-# QDD test
-# add_library(qdd STATIC src/qdd.cpp src/amplitude.cpp)
-# add_executable(qdd_test test/node_test.cpp test/qdd_test.cpp)
-# target_link_libraries(qdd_test qdd amplitude GTest::gtest_main)
-
 # Diagram test
-# add_library(diagram_t STATIC )
 add_executable(diagram_test ${absi_files} test/diagram_test.cpp include/diagram.h)
 target_link_libraries(diagram_test ${absi_libs} GTest::gtest_main)
 
