💚 Checkout submodules in CI
This should fix the fact that doxygen-awesome-css was missing from the online doc

--- a/.github/workflows/doxygen.yml
+++ b/.github/workflows/doxygen.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          submodules: 'true'
 
       - name: Install Doxygen
         run: sudo apt update && sudo apt install -y doxygen graphviz
